udpade files structure

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- المحتوى الرئيسي -->
     <section id="intro" style="background-color: #f8f8f8; text-align: center; padding: 40px;">
-        <img src="/myProject/images/OIP.jpeg" alt="شعار السعودية" style="width: 80px;">
+        <img src="./myProject/images/OIP.jpeg" alt="شعار السعودية" style="width: 80px;">
         <p>"سيتغلب 'ذا لاين' على التحديات التي تواجه البشرية في الحياة الحضرية في وقتنا الحاضر، ويسلط الضوء على الطرق
             البديلة المبتكرة للمعيشة. لا يمكننا تجاهل تحديات المعيشة والأزمات البيئية التي تواجه مدن العالم اليوم، ولكن
             نيوم تحتل موقع الصدارة في تقديم أحدث الحلول وأكثرها ابتكارًا لتخطّي هذه التحديات. وتقود نيوم فريقًا من ألمع
@@ -50,7 +50,7 @@
 
                 <!-- حماية البيئة -->
                 <div class="vision-box">
-                    <img src="../myProject/images/env.png" alt="حماية البيئة">
+                    <img src="./myProject/images/env.png" alt="حماية البيئة">
                     <h3>حماية البيئة</h3>
                     <p>نتبع في نيوم نموذجًا للأعمال يتمحور حول مبادئ الحماية والمحافظة والتجديد، حيث نعمل على دفع عجلة
                         تجديد الكون، ووضع الطبيعة على رأس أولوياتنا.</p>
@@ -58,7 +58,7 @@
 
                 <!-- المعيشة -->
                 <div class="vision-box">
-                    <img src="../myProject/images/liveability.png" alt="المعيشة">
+                    <img src="./myProject/images/liveability.png" alt="المعيشة">
                     <h3>المعيشة</h3>
                     <p>تضع نيوم نهجًا متكاملًا محوره الإنسان وجوهره مراعاة البيئة في التخطيط والتنمية الحضرية، مما يسهم
                         في تقديم نموذج رائد للمستقبل.</p>
@@ -66,7 +66,7 @@
 
                 <!-- الأعمال التجارية -->
                 <div class="vision-box">
-                    <img src="../myProject/images/business.jpeg" alt="الأعمال التجارية">
+                    <img src="./myProject/images/business.jpeg" alt="الأعمال التجارية">
                     <h3>الأعمال التجارية</h3>
                     <p>تشكل نيوم مركزًا عالميًا رائدًا ومفتوحًا للأعمال التجارية، مما يسهم في بناء اقتصاد مستدام ويمهد
                         الطريق لمعايير جديدة في ريادة الأعمال.</p>
@@ -128,11 +128,11 @@
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
                 <div class="gallery-slider">
                     <div class="gallery-slides">
-                        <img src="../myProject/images/the-linebg.jpg" alt="ذا لاين 1">
-                        <img src="../myProject/images/The-Line-Project-13.jpg" alt="ذا لاين 2">
-                        <img src="../myProject/images/The-Line-Neom-4-1024x768.jpg" alt="ذا لاين 3">
-                        <img src="../myProject/images/THE-LINE-1.png" alt="ذا لاين 4">
-                        <img src="../myProject/images/neom-designs-the-line-worlds-first-zero-gravity-vertical-city-saudi-arabia-designboom-2.jpg"
+                        <img src="./myProject/images/the-linebg.jpg" alt="ذا لاين 1">
+                        <img src="./myProject/images/The-Line-Project-13.jpg" alt="ذا لاين 2">
+                        <img src="./myProject/images/The-Line-Neom-4-1024x768.jpg" alt="ذا لاين 3">
+                        <img src="./myProject/images/THE-LINE-1.png" alt="ذا لاين 4">
+                        <img src="./myProject/images/neom-designs-the-line-worlds-first-zero-gravity-vertical-city-saudi-arabia-designboom-2.jpg"
                             alt="ذا لاين 5">
                     </div>
                 </div>
