--- a/index.html
+++ b/index.html
@@ -1,156 +1,207 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ذا لاين - المدينة الذكية</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
-
 <body>
+  <!-- ✅ شريط التنقل -->
+  <div class="topnav">
+    <!-- الشعار -->
+    <a href="#" class="logo">
+      <img src="./myProject/images/اللوقو.png" alt="شعار ذا لاين" />
+    </a>
+
+    <!-- قائمة التنقل -->
+    <nav>
+      <ul>
+        <li><a href="#neom-vision">رؤية نيوم</a></li>
+        <li><a href="#features">المميزات</a></li>
+        <li><a href="#gallery">المعرض</a></li>
+        <li><a href="#contact">تواصل معنا</a></li>
+      </ul>
+    </nav>
+
+    <!-- ✅ زر الهامبرغر يظهر على الجوال فقط -->
+    <a href="javascript:void(0);" class="icon">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+
+  <!--  الهيدر -->
+  <header></header>
 
 
-    <!-- رأس الصفحة -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#neom-vision">رؤية نيوم</a></li>
-                <li><a href="#features">المميزات</a></li>
-                <li><a href="#gallery">المعرض</a></li>
-                <li><a href="#contact">تواصل معنا</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- المحتوى الرئيسي -->
-    <section id="intro" style="background-color: #f8f8f8; text-align: center; padding: 40px;">
-        <img src="./myProject/images/OIP.jpeg" alt="شعار السعودية" style="width: 80px;">
-        <p>"سيتغلب 'ذا لاين' على التحديات التي تواجه البشرية في الحياة الحضرية في وقتنا الحاضر، ويسلط الضوء على الطرق
-            البديلة المبتكرة للمعيشة. لا يمكننا تجاهل تحديات المعيشة والأزمات البيئية التي تواجه مدن العالم اليوم، ولكن
-            نيوم تحتل موقع الصدارة في تقديم أحدث الحلول وأكثرها ابتكارًا لتخطّي هذه التحديات. وتقود نيوم فريقًا من ألمع
-            العقول في العمارة والهندسة والبناء لتجسيد فكرة التشييد العمودي واقعًا نعيشه."</p>
-        <p><strong>صاحب السمو الملكي الأمير محمد بن سلمان، ولي العهد ورئيس مجلس إدارة شركة نيوم</strong></p>
-        <button onclick="window.location.href='https://www.neom.com/ar-sa/newsroom/hrh-announces-theline-designs'">اقرأ
-            البيان الصحفي</button>
+<!--  نافذة منبثقة لعرض الوقت والتحقق من الاسم -->
+<div id="popup" class="popup-overlay">
+  <div class="popup-content">
+    <h2>مرحبًا بك!</h2>
+    <p><i class="fa fa-clock-o"></i> <span id="datetime-value"></span></p>
+    <label for="nameInput">تحقق من الاسم</label>
+    <input type="text" id="nameInput" placeholder="أدخل اسمك" />
+    <p id="nameMsg"></p>
+    <button id="closePopup">متابعة</button>
+  </div>
+</div>
+
+
+
+
+
+
+<!--  المقدمة (intro) تحت الهيدر مباشرة) -->
+<section id="intro" style="background-color: #f8f8f8; text-align: center; padding: 40px;">
+  <img src="./myProject/images/OIP.jpeg" alt="شعار السعودية" style="width: 80px;" />
+  <p>
+    "سيتغلب 'ذا لاين' على التحديات التي تواجه البشرية في الحياة الحضرية في وقتنا الحاضر..."
+  </p>
+  <p>
+    <strong>صاحب السمو الملكي الأمير محمد بن سلمان، ولي العهد ورئيس مجلس إدارة شركة نيوم</strong>
+  </p>
+  <button onclick="window.location.href='https://www.neom.com/ar-sa/newsroom/hrh-announces-theline-designs'">
+    اقرأ البيان الصحفي
+  </button>
+</section>
+
+  <main>
+    <section id="neom-vision" style="text-align: center; padding: 50px; background-color: #121212; color: white;">
+      <h2 style="font-size: 32px; font-weight: bold;">رؤية نيوم</h2>
+      <p style="font-size: 18px; color: #ccc;">
+        أرض المستقبل حيث تمكين نخبة العقول...
+      </p>
+      <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
+        <div class="vision-box">
+          <img src="./myProject/images/env.png" alt="حماية البيئة" />
+          <h3>حماية البيئة</h3>
+          <p>نتبع في نيوم نموذجًا للأعمال...</p>
+        </div>
+        <div class="vision-box">
+          <img src="./myProject/images/liveability.png" alt="المعيشة" />
+          <h3>المعيشة</h3>
+          <p>تضع نيوم نهجًا متكاملًا محوره الإنسان...</p>
+        </div>
+        <div class="vision-box">
+          <img src="./myProject/images/business.jpeg" alt="الأعمال التجارية" />
+          <h3>الأعمال التجارية</h3>
+          <p>تشكل نيوم مركزًا عالميًا رائدًا...</p>
+          <a href="https://www.neom.com/ar-sa/about/business" target="_blank" class="read-more">قراءة المزيد</a>
+        </div>
+      </div>
     </section>
 
+    <section id="features">
+      <h2>مميزات مشروع ذا لاين</h2>
+      <p>مشروع <strong>ذا لاين</strong> هو أكثر من مجرد مدينة...</p>
+      <div class="features-container">
+        <div class="feature-box feature-box-1">
+          <div class="feature-overlay"></div>
+          <h3>100٪ طاقة متجددة</h3>
+          <p>يتم تشغيل المدينة بالكامل...</p>
+          <span class="fact">⚡ ستنتج ذا لاين أكثر من 50 جيجاوات...</span>
+        </div>
+        <div class="feature-box feature-box-2">
+          <div class="feature-overlay"></div>
+          <h3>تصميم طولي مبتكر</h3>
+          <p>تمتد المدينة على طول 170 كم...</p>
+          <span class="fact">📏 المسافة بين أي نقطتين لا تتجاوز 20 دقيقة...</span>
+        </div>
+        <div class="feature-box feature-box-3">
+          <div class="feature-overlay"></div>
+          <h3>بنية تحتية ذكية</h3>
+          <p>تُدار المدينة بأنظمة ذكاء اصطناعي...</p>
+          <span class="fact">🧠 النظام يجمع البيانات لحظيًا...</span>
+        </div>
+        <div class="feature-box feature-box-4">
+          <div class="feature-overlay"></div>
+          <h3>سهولة التنقل بدون سيارات</h3>
+          <p>أنظمة نقل كهربائية فائقة السرعة...</p>
+          <span class="fact">🚄 قطار فائق السرعة بدون انبعاثات...</span>
+        </div>
+      </div>
+    </section>
 
-    <main>
-        <section id="neom-vision" style="text-align: center; padding: 50px; background-color: #121212; color: white;">
-            <h2 style="font-size: 32px; font-weight: bold;">رؤية نيوم</h2>
-            <p style="font-size: 18px; color: #ccc;">أرض المستقبل حيث تمكين نخبة العقول وأمهر الكفاءات من تجسيد الأفكار
-                الرائدة وتخطي المألوف، في عالم حقيقي يصنعه الخيال.</p>
+<!-- Container for the image gallery -->
+<div class="container">
 
-            <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
+  <!-- Full-width images with number text -->
+  <div class="mySlides">
+    <div class="numbertext">1 / 6</div>
+      <img src="./myProject/images/the-linebg.jpg" style="width:100%">
+  </div>
 
-                <!-- حماية البيئة -->
-                <div class="vision-box">
-                    <img src="./myProject/images/env.png" alt="حماية البيئة">
-                    <h3>حماية البيئة</h3>
-                    <p>نتبع في نيوم نموذجًا للأعمال يتمحور حول مبادئ الحماية والمحافظة والتجديد، حيث نعمل على دفع عجلة
-                        تجديد الكون، ووضع الطبيعة على رأس أولوياتنا.</p>
-                </div>
+  <div class="mySlides">
+    <div class="numbertext">2 / 6</div>
+      <img src="./myProject/images/The-Line-Project-13.jpg" style="width:100%">
+  </div>
 
-                <!-- المعيشة -->
-                <div class="vision-box">
-                    <img src="./myProject/images/liveability.png" alt="المعيشة">
-                    <h3>المعيشة</h3>
-                    <p>تضع نيوم نهجًا متكاملًا محوره الإنسان وجوهره مراعاة البيئة في التخطيط والتنمية الحضرية، مما يسهم
-                        في تقديم نموذج رائد للمستقبل.</p>
-                </div>
+  <div class="mySlides">
+    <div class="numbertext">3 / 6</div>
+      <img src="./myProject/images/The-Line-Neom-4-1024x768.jpg" style="width:100%">
+  </div>
 
-                <!-- الأعمال التجارية -->
-                <div class="vision-box">
-                    <img src="./myProject/images/business.jpeg" alt="الأعمال التجارية">
-                    <h3>الأعمال التجارية</h3>
-                    <p>تشكل نيوم مركزًا عالميًا رائدًا ومفتوحًا للأعمال التجارية، مما يسهم في بناء اقتصاد مستدام ويمهد
-                        الطريق لمعايير جديدة في ريادة الأعمال.</p>
-                    <a href="https://www.neom.com/ar-sa/about/business" target="_blank" class="read-more">قراءة
-                        المزيد</a>
-                </div>
+  <div class="mySlides">
+    <div class="numbertext">4 / 6</div>
+      <img src="./myProject/images/neom-designs-the-line-worlds-first-zero-gravity-vertical-city-saudi-arabia-designboom-2.jpg" style="width:100%">
+  </div>
 
-            </div>
-        </section>
+  <div class="mySlides">
+    <div class="numbertext">5 / 6</div>
+      <img src="./myProject/images/energy.jpg" style="width:100%">
+  </div>
 
+  <div class="mySlides">
+    <div class="numbertext">6 / 6</div>
+      <img src="./myProject/images/main.jpg" style="width:100%">
+  </div>
 
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-        <section id="features">
-            <h2>مميزات مشروع ذا لاين</h2>
-            <p>
-                مشروع <strong>ذا لاين</strong> هو أكثر من مجرد مدينة، إنه نموذج ثوري لمستقبل العيش الذكي،
-                حيث يندمج التصميم المبتكر مع التكنولوجيا المتقدمة لتحقيق بيئة مستدامة وصديقة للإنسان.
-            </p>
+  <!-- Image text -->
+  <div class="caption-container">
+    <p id="caption"></p>
+  </div>
 
-            <div class="features-container">
-                <div class="feature-box feature-box-1">
-                    <div class="feature-overlay"></div> <!--  المميزات اضافة طبقة شفافة لكل مربع بقسم-->
-                    <h3>100٪ طاقة متجددة</h3>
-                    <p>يتم تشغيل المدينة بالكامل بواسطة الطاقة الشمسية وطاقة الرياح، مما يجعلها خالية من الانبعاثات
-                        الكربونية.</p>
-                    <span class="fact">⚡ ستنتج ذا لاين أكثر من 50 جيجاوات من الطاقة النظيفة سنويًا.</span>
-                </div>
+  <!-- Thumbnail images -->
+  <div class="row">
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/the-linebg.jpg" style="width:100%" onclick="currentSlide(1)" alt="الخط الساحلي لنيوم">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/THE-LINE-1.png" style="width:100%" onclick="currentSlide(2)" alt="المدخل الرئيسي للمدينة العمودية">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/The-Line-Project-13.jpg" style="width:100%" onclick="currentSlide(3)" alt="المدينة البيئية الصحراوية">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/neom-designs-the-line-worlds-first-zero-gravity-vertical-city-saudi-arabia-designboom-2.jpg" style="width:100%" onclick="currentSlide(4)" alt="نيوم من السماء عند الغروب">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/main.jpg" style="width:100%" onclick="currentSlide(5)" alt="رؤية THE LINE المستقبلية">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="./myProject/images/energy.jpg" style="width:100%" onclick="currentSlide(6)" alt="مركز الطاقة المتجددة">
+    </div>
+  </div>
+</div>
+  </main>
 
-                <div class="feature-box feature-box-2">
-                    <div class="feature-overlay"></div>
-                    <h3>تصميم طولي مبتكر</h3>
-                    <p>تمتد المدينة على طول 170 كم، مما يقلل الحاجة للبنية التحتية التقليدية ويعزز كفاءة المساحة.</p>
-                    <span class="fact">📏 المسافة بين أي نقطتين داخل المدينة لا تتجاوز 20 دقيقة بوسائل النقل
-                        الذكية.</span>
-                </div>
+  <section id="promo-banner">
+    <h2>امتلك شقتك في قلب المستقبل</h2>
+    <img src="./myProject/images/promo.jpeg" alt="امتلك شقتك في ذا لاين" />
+  </section>
 
-                <div class="feature-box feature-box-3">
-                    <div class="feature-overlay"></div>
-                    <h3>بنية تحتية ذكية تعتمد على الذكاء الاصطناعي</h3>
-                    <p>يتم تشغيل كافة الخدمات داخل المدينة بأنظمة ذكاء اصطناعي تراقب وتحسن جودة الحياة باستمرار.</p>
-                    <span class="fact">🧠 النظام يجمع البيانات بشكل لحظي لضمان حياة متكاملة وآمنة للسكان.</span>
-                </div>
-
-                <div class="feature-box feature-box-4">
-                    <div class="feature-overlay"></div>
-                    <h3>سهولة التنقل بدون سيارات</h3>
-                    <p>تعتمد المدينة على أنظمة نقل كهربائية فائقة السرعة، مما يضمن بيئة خالية من الازدحام والتلوث.</p>
-                    <span class="fact">🚄 أول قطار فائق السرعة بدون انبعاثات سيربط جميع أنحاء المدينة خلال دقائق.</span>
-                </div>
-            </div>
-        </section>
-
-
-
-
-        <section id="gallery">
-            <h2>معرض صور مشروع ذا لاين</h2>
-            <div class="gallery-container">
-                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-                <div class="gallery-slider">
-                    <div class="gallery-slides">
-                        <img src="./myProject/images/the-linebg.jpg" alt="ذا لاين 1">
-                        <img src="./myProject/images/The-Line-Project-13.jpg" alt="ذا لاين 2">
-                        <img src="./myProject/images/The-Line-Neom-4-1024x768.jpg" alt="ذا لاين 3">
-                        <img src="./myProject/images/THE-LINE-1.png" alt="ذا لاين 4">
-                        <img src="./myProject/images/neom-designs-the-line-worlds-first-zero-gravity-vertical-city-saudi-arabia-designboom-2.jpg"
-                            alt="ذا لاين 5">
-                    </div>
-                </div>
-                <button class="next" onclick="moveSlide(1)">&#10095;</button>
-            </div>
-        </section>
-
-    </main>
-
-    <!-- تذييل الصفحة -->
-    <footer id="contact">
-        <p>© 2025 جميع الحقوق محفوظة - مشروع ذا لاين</p>
-        <p>هذه الصفحة للطالب أسامة النجار</p>
-        <p>تواصل معنا: <a href="mailto:info@theline.com">info@theline.com</a></p>
-    </footer>
-
-    <script src="script.js"></script>
-
+  <footer id="contact">
+    <p>© 2025 جميع الحقوق محفوظة - مشروع ذا لاين</p>
+    <p>هذه الصفحة للطالب أسامة النجار</p>
+    <p>تواصل معنا: <a href="mailto:info@theline.com">info@theline.com</a></p>
+  </footer>
 </body>
-
 </html>
