add readme file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- ✅ شريط التنقل -->
+  <!--  شريط التنقل -->
   <div class="topnav">
     <!-- الشعار -->
     <a href="#" class="logo">
@@ -27,7 +27,7 @@
       </ul>
     </nav>
 
-    <!-- ✅ زر الهامبرغر يظهر على الجوال فقط -->
+    <!-- زر الهامبرغر يظهر على الجوال فقط -->
     <a href="javascript:void(0);" class="icon">
       <i class="fa fa-bars"></i>
     </a>
